# gguf-tensor-overrider-py

./: .gitignore  README.md  architecture.md  pyproject.toml  run_integration_tests.py  spec.md
src/gguf_tensor_overrider_py/: __init__.py  __main__.py  cli.py  core.py  httpfile.py  httpggufparser.py  models.py  placement_fitness.py
tests/: test_collect_tensors_in_groups.py  test_core.py  test_integration.py  test_llamacpp_formatter.py  test_models.py
