[project]
name = "gguf-tensor-overrider-py"
version = "0.1.0"
description = "GGUF tensor override generator for llama.cpp and ik_llama.cpp"
readme = "README.md"
authors = [
    { name = "Maurice-Pascal Sonnemann", email = "mpsonnemann@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gguf-tensor-overrider-py = "gguf_tensor_overrider_py:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
