[project]
name = "gguf-tensor-overrider-py"
version = "0.1.0"
description = "GGUF tensor override generator for llama.cpp and ik_llama.cpp"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Maurice-Pascal Sonnemann", email = "mpsonnemann@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gguf-parser>=0.1.1",
    "typer>=0.19.1",
    "nvidia-ml-py>=13.580.82",
    "requests>=2.32.5",
]

[project.scripts]
gguf-tensor-overrider-py = "gguf_tensor_overrider_py:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "huggingface-hub>=0.35.0",
    "ipdb>=0.13.13",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
